# esp32c6_r60afd1

./: .gitignore  CMakeLists.txt  DOCS.md  README.txt  originalcode.txt  ota_web_manager.py  partitions.csv
components/libraries/ESP_Async_WebServer/src/: WebHandlers.cpp
components/libraries/R60ABD1_Library/: R60ABD1.cpp  R60ABD1.h  keywords.txt
components/wifiManager/: Kconfig
components/wifiManager/Src/: wm_httpServer.c
components/wifiManager/Web/: app.js  index.html  scan.css
crt/: prod.crt  server2.crt
main/: CMakeLists.txt  main.c  ota_update.c  ota_update.h
main/crt/: prod.crt  server1.crt
old/: json_payloads.h  oldmain.c  uart_comm.c
old/main/: CMakeLists.txt  json_payloads.c  main.c  tasks.c  tasks.h  uart_comm.h
